[refactor] add to cart